--- a/API_NASA/index.html
+++ b/API_NASA/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MARS RECOVERY PHOTOS</title>
     <link rel="stylesheet" href="css/api_nasa.css">
     <script src="js/service_api_nasa.js"></script>
 </head>
@@ -11,13 +11,6 @@
     <header>
         <h1>MARS RECOVERY PHOTOS</h1>
     </header>
-    <div id="container">
-        <div class="rover-photo">
-            <img src="http://mars.jpl.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/01000/opgs/edr/fcam/FLB_486265257EDR_F0481570FHAZ00323M_.JPG" alt="Mars Rover Photo">
-            <div class="rover-details">
-                <p>Camera: CAMERA</p>
-                <p>Earth Date: DATE</p>
-        </div>
-    </div>
+    <div id="container" class="card-container"></div>
 </body>
 </html>
